# GbInRust

./: Cargo.toml
src/: cpu.rs  main.rs  mem.rs  ppu.rs
src/cpu/: ops.rs  registers.rs  stats.rs
