[package]
name = "rustygb"
version = "0.1.0"
authors = ["jonknet <jonknet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
sdl2 = "0.34"
crossbeam-utils = "0.8"
log = "0.4"
lazy_static = "1.4.0"